another attempt to fix the layout issues, not too bad. also added option in the experiment creation to ad an intructory discussion and added a boolian for "isIntroduction" so that the two types of discussion can be differentiated

--- a/client/main.css
+++ b/client/main.css
@@ -3,6 +3,7 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, "Font Awesome 5 Free";
   font-size: 14px;
   height: 100vh;
+  overflow: hidden;
 }
 
 /*********************************************************
